--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Hi there, before you can customize lemonades for your order we need some information about you</h1>
+  <div>
+    <label for="name">Name: (First & Last)</label>
+    <input type="text" name="name"/>
+    <label for="phoneNumber">Phone Number:</label>
+    <input type="text" name="phoneNumber"/>
+    <label for="lemonadeStand">Which lemonade stand are you wanting to order from today?</label>
+    <select name="lemonadeStand">
+      <option>Cooksys Lemonade Stand</option>
+      <option>Brad's Lemonade Stand</option>
+    </select>
+    <a href="lemonade.html"><button>Start your order</button></a>
+  </div>
 </body>
 </html>
