Create lemonade.js file

--- a/public/lemonade.html
+++ b/public/lemonade.html
@@ -21,15 +21,15 @@
         </div>
       </div>
       <div class="form-box">
-        <div class="row">
-          <label>Lemon Juice</label>
+        <div name="lemon-juice" class="row">
+          <label id="lemonJuiceLabel">Lemon Juice</label>
           <div class="row">
             <button class="increment">+</button>
             <h4>3 ounces</h4>
             <button class="decrement">-</button>
           </div>
         </div>
-        <div class="row">
+        <div name="water" class="row">
           <label>Water</label>
           <div class="row">
             <button class="increment">+</button>
@@ -37,7 +37,7 @@
             <button class="decrement">-</button>
           </div>
         </div>
-        <div class="row">
+        <div name="sugar" class="row">
           <label>Sugar</label>
           <div class="row">
             <button class="increment">+</button>
@@ -45,7 +45,7 @@
             <button class="decrement">-</button>
           </div>
         </div>
-        <div class="row">
+        <div name="ice" class="row">
           <label>Ice</label>
           <div class="row">
             <button class="increment">+</button>
@@ -56,5 +56,11 @@
         <button class="yellow-button">Add to order</button>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+      integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+      crossorigin="anonymous"
+    ></script>
+    <script src="../src/lemonade.js"></script>
   </body>
 </html>
