Complete lemonade functionality and styling

--- a/public/lemonade.html
+++ b/public/lemonade.html
@@ -21,6 +21,9 @@
             <div id="lemonJuice"></div>
             <div id="water"></div>
             <div id="sugar"></div>
+            <div id="iceBox">
+              <img class="ice" src="../img/ice.svg" alt="Ice Cube" />
+            </div>
           </div>
         </div>
       </div>
