Add js functionality to index, lemonade pages

--- a/public/index.html
+++ b/public/index.html
@@ -20,20 +20,26 @@
       </h1>
       <div class="form-box">
         <label for="name">Name: (First & Last)</label>
-        <input class="input-style" type="text" name="name" />
+        <input id="name" class="input-style" type="text" name="name" />
+        <p id="nameError" class="error hidden"></p>
         <label for="phoneNumber">Phone Number:</label>
-        <input class="input-style" type="text" name="phoneNumber" />
+        <input id="phoneNumber" class="input-style" type="text" name="phoneNumber" />
+        <p id="phoneError" class="error hidden"></p>
         <label for="lemonadeStand"
           >Which lemonade stand are you wanting to order from today?</label
         >
-        <select class="input-style font" name="lemonadeStand">
+        <select id="lemonadeStand" class="input-style font" name="lemonadeStand">
           <option>Cooksys Lemonade Stand</option>
           <option>Brad's Lemonade Stand</option>
         </select>
-        <a href="lemonade.html"
-          ><button class= yellow-button font">Start your order</button></a
-        >
+        <button class= yellow-button font">Start your order</button>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+      integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
+      crossorigin="anonymous"
+    ></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
