--- a/public/lemonade.html
+++ b/public/lemonade.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../src/lemonade.css" />
   </head>
   <body>
-    <a id="checkout" href="cart.html"></a>
+    <button id="checkout"></button>
     <div class="container">
       <div class="background">
         <div class="glass-back">
@@ -61,6 +61,9 @@
           </div>
         </div>
         <button class="yellow-button">Add to order</button>
+        <span id="lemonadeError" class="error hidden"
+          >You have to add a minimum of 1 ingredient to create a lemonade</span
+        >
       </div>
     </div>
     <script
