Complete cart functionality and styling

--- a/public/cart.html
+++ b/public/cart.html
@@ -61,16 +61,23 @@
       <h1 class="blue">Your Order</h1>
       <div class="order-container eighty-percent">
         <div class="order-box"></div>
-        <h2 class="blue">Total Price: $2.05</h2>
+        <h2 id="order-total" class="blue">Total Price: $0</h2>
       </div>
       <div class="form-container eighty-percent">
-        <select class="input-style one-hundred-percent font">
+        <select class="input-style one-hundred-percent">
           <option>Cooksys Lemonade Stand</option>
         </select>
-        <a href="order-success.html" "
-          ><button class="yellow-button font">Place Order</button></a
-        >
+        <a href="order-success.html">
+          <button class="yellow-button font">Place Order</button>
+        </a>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+      integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA="
+      crossorigin="anonymous"
+    ></script>
+    <script src="../src/lemonade-template.js"></script>
+    <script src="../src/cart.js"></script>
   </body>
 </html>
