--- a/public/order-success.html
+++ b/public/order-success.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lemonade Stand</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap"
@@ -16,10 +16,12 @@
     <div class="container center-text">
       <h1 class="yellow total width">Total: $2.38</h1>
       <h2 class="green success width">Your Order Has Been Placed!</h2>
-      <h3 class="blue reminder width">Please Bring Payment With You At Pick Up</h3>
-      <a href="index.html" class="width"
-        ><button class="yellow-button font width">Place Another Order</button></a
-      >
+      <h3 class="blue reminder width">
+        Please Bring Payment With You At Pick Up
+      </h3>
+      <a href="index.html" class="width">
+        <button class="yellow-button font">Place Another Order</button>
+      </a>
     </div>
   </body>
 </html>
